<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="20sp"
    android:gravity="center">

    <ProgressBar
        android:id="@+id/progress_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/layout_sign_in_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@color/orange"
            android:padding="1sp">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                android:gravity="center"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:hint="@string/username"
                android:autofillHints=""
                android:inputType="text" />

        </RelativeLayout>

        <View
            android:id="@+id/gap1"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_below="@+id/layout_username"/>

        <RelativeLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@color/orange"
            android:padding="1sp"
            android:layout_below="@id/gap1">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                android:gravity="center"
                android:textColorHint="@color/text_color"
                android:textColor="@color/text_color"
                android:hint="@string/password"
                android:autofillHints=""
                android:inputType="textPassword"/>



        </RelativeLayout>

        <View
            android:id="@+id/gap2"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_below="@+id/layout_password"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:background="@drawable/rectangular_shape_blue"
            android:layout_below="@+id/gap2"
            android:layout_centerInParent="true"/>

        <View
            android:id="@+id/gap5"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_below="@+id/btnSignIn"/>

        <View
            android:id="@+id/gap3"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/text_color"
            android:layout_below="@id/gap5"/>

        <TextView
            android:id="@+id/gap4"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:text="@string/or"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:layout_below="@+id/gap3"/>

        <RelativeLayout
            android:id="@+id/layout_guest_signIn"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@color/orange"
            android:padding="1sp"
            android:layout_below="@id/gap4">

            <TextView
                android:id="@+id/txtGuestSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:text="@string/sign_as_guest"/>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>