<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_me_shape"
        android:gravity="center"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:id="@+id/layout_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1sp">

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:gravity="center"
                android:background="@drawable/rectangular_shape_my_message_color"
                android:textColor="@color/text_color"
                android:text="@string/sign_in"/>

        </RelativeLayout>

        <View
            android:id="@+id/gap1"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_below="@id/layout_sign_in"/>

        <RelativeLayout
            android:id="@+id/layout_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1sp"
            android:layout_below="@id/gap1">

            <TextView
                android:id="@+id/txtCreateNewAcc"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:gravity="center"
                android:background="@drawable/rectangular_shape_my_message_color"
                android:textColor="@color/text_color"
                android:text="@string/create_account"/>


        </RelativeLayout>

        <View
            android:id="@+id/gap2"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_below="@id/layout_create_acc"/>

        <RelativeLayout
            android:id="@+id/layout_recoverAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1sp"
            android:layout_below="@id/gap2">

            <TextView
                android:id="@+id/txtRecoverAccount"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:gravity="center"
                android:background="@drawable/rectangular_shape_my_message_color"
                android:textColor="@color/text_color"
                android:text="@string/recover_your_account"/>


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>